resources/tests/valid_syntax/binary.ct
//Compilation successful!
fn hello()->void: 10 + 10 + 10 + 10 + 10;