resources/tests/invalid_syntax/fn_decl_var_arg.ct
//`Function using C-style variadic can only be extern!
//1
fn print(va_arg)->void;